--- a/intake_tracker/templates/download_plan.html
+++ b/intake_tracker/templates/download_plan.html
@@ -59,7 +59,7 @@
     
                 <div class="mb-3">
                     <label for="custom-meal" class="form-label">
-                        <i class="fas fa-carrot"></i> Enter Your Custom Meal/Ingredients:
+                        <i class="fas fa-carrot"></i> Enter Your Custom Meal/Ingredients or what you love:
                     </label>
                     <input type="text" name="custom_meal" id="custom-meal" class="form-control"
                         placeholder="E.g., Oatmeal with nuts" required>
